add styles to homepage

--- a/source/stylesheets/_grid.css.sass
+++ b/source/stylesheets/_grid.css.sass
@@ -100,14 +100,14 @@ header
         position:
           x: 50%
           y: 100%     
-        image: url(https://psv4.vk.me/c610618/u143001477/docs/570e6cfe39cc/ipad1.png?extra=7QRi75UVZPbUIY4V2sqbq7QAJug4DGq5hBoVpKY2lkAVdzdFV3K3hk18fWQVrxVo2tIfBKypm0MA9n750M1rPqvbtanKzPtB)
+        image: url(../images/box_2.png)
     &.three
       background:
         size: 60%
         position:
           x: 60%
           y: 50%
-        image: url(https://psv4.vk.me/c610618/u143001477/docs/ab3dbf169624/media.png?extra=8pYJQQo0_1QZ9oE7ntQVZV8vMjO60-ct1MJK8LIRWjFb77evckOArRIioXfUVjrrDbz1ByvSIufFy46PV0MMQqF-6JwiZDCp)
+        image: url(../images/box_3.png)
     &.four
       background:
         size: 70%
