--- a/source/stylesheets/common.css.sass
+++ b/source/stylesheets/common.css.sass
@@ -2,7 +2,7 @@
 
 @import variables
 
-@import mixins
+// @import mixins
 
 @import fonts
 
@@ -16,6 +16,10 @@ html, body
 
 body
   background: $pColor
+
+.clearfix , .section
+  overflow: auto
+  zoom: 1
 
 .bgDecor
   z-index: -999
