Move sass-variables to common sheet

--- a/source/stylesheets/common.css.sass
+++ b/source/stylesheets/common.css.sass
@@ -1,15 +1,14 @@
 @import ../bourbon/bourbon
 
-@import variables
-
-// @import mixins
-
 @import fonts
 
 @import grid
 
-// @import temp
-
+// variables
+$footerH: 300px
+$topColor: #202033
+$pColor: #e7e8ea
+$headerDecorH: 300px
 
 html, body
   width: 100%
