cut number of Font-names

--- a/source/stylesheets/_grid.css.sass
+++ b/source/stylesheets/_grid.css.sass
@@ -115,14 +115,12 @@ header
           x: 50%
           y: 65%
         image: url(../images/box_4.png)
-  .new
-    background: #fff
   h4
     z-index: 1
     font:
-      family: colaboratelightregular
+      family: colaborate
       size: 19px
-      weight: 100
+      weight: 200
     color: #727272
     text:
       shadow: 1px 1px 0px #fff
