--- a/source/stylesheets/common.css.sass
+++ b/source/stylesheets/common.css.sass
@@ -8,9 +8,6 @@ $headerDecorH: 300px
 @import fonts
 @import grid
 
-html, body
-  width: 100%
-
 body
   background: $pColor
 
@@ -58,6 +55,156 @@ body
   position: absolute
   height: 1000px
   top: -700px
+
+.footer-text
+  color: #a0a0aa
+
+footer
+  outline: 0
+  margin-top: -300px
+  @extend .footer-text
+  h4 
+    font: 
+      family: 'colaborate'
+      weight: 400
+      size: 27px
+    color: #fff
+  input, textarea 
+    border-bottom: 1px solid #525261
+    background-image: linear-gradient(transparent, #525261), linear-gradient(transparent, #525261)
+    background-size: 1px 100%
+    background-position: 0 0, 100% 0
+    background-repeat: no-repeat
+    background-color: #242439
+    border-radius: 7px
+    color: #5e5e6a
+    border: 1px
+    box-shadow: inset 0px 3px 5px -2px rgba(0,0,0,0.57)
+    position: relative
+    border-bottom: 1px solid #525261
+    background-image: linear-gradient(transparent, #525261), linear-gradient(transparent, #525261)
+    background-size: 1px 100%
+    background-position: 0 0, 100% 0
+    background-repeat: no-repeat
+  input
+    height: 27px
+    width: 50%
+    padding-left: 10px
+    &:focus
+      outline: 0
+  textarea
+    resize: none
+    margin-left: 20px
+    width: 100%
+    height: 65px
+    &:focus
+      outline: 0
+  button
+    padding: 7px 14px
+    border: 0
+    font: 
+      family: colaborate
+      weight: 100
+    outline: 0
+    border-radius: 8px
+    background: #fff
+    &:hover 
+      background: #d3d3d3
+    &.submite
+      margin-left: 23px
+      width: 100%
+      margin-top: 10px
+  .input-gr
+    width: 49%
+    display: inline-block
+    vertical-align: top
+    margin-top: 15px
+    input
+      width: 100%
+      margin-bottom: 10px
+  .author
+    text-align: center
+    font: 
+      family: colaborate
+      size: 13px
+      weight: 100
+    margin-top: 5px 
+
+.tw-box 
+  padding: 10px 30px 0 30px
+  position: relative
+  display: inline-block
+  font-family: "Contra"
+  font-size: 13px
+  img 
+    margin-right: 20px
+    vertical-align: middle
+  p 
+    display: inline-block
+    width: 85%
+    vertical-align: middle
+    line-height: 1.333
+    font-size: 14px
+    color: rgba(255, 255, 255, 0.549)
+  span
+    float: right
+    margin-top: -10px
+    padding-bottom: 15px
+    font-size: 15px
+    font-style: italic
+    color: #c3c3c7
+    font-family: "Contra italic"
+  
+
+.tw-box:before, .tw-box:after 
+  content: ""
+  position: absolute
+  bottom: -1px
+  height: 2px
+
+.tw-box:before 
+  content: " "
+  position: absolute
+  top: 1px
+  left: 0
+  right: 0
+  height: 1px
+  background: radial-gradient(circle at 50%, #858598, transparent)
+
+.news-size
+  display: inline-block
+  width: 49%
+  vertical-align: top
+  box-sizing: border-box
+  margin-top: 10px
+  h4 
+  font: 
+    family: 'colaborate'
+.news
+  @extend .news-size
+  padding: 0 20px
+  p 
+    color: #a0a0aa
+    font-weight: 100
+  .s-icons
+    margin-top: 10px
+    img
+      opacity: 0.7
+      cursor: pointer
+      margin-right: 10px
+      &:hover
+        opacity: 1 
+.contact-form
+  @extend .news-size
+
+.tw-box:after 
+  content: " "
+  position: absolute
+  bottom: 0px
+  left: 0
+  right: 0
+  height: 1px
+  background: radial-gradient(circle at 50%, #7B7B8C, transparent)
 
 .circle_shadow
   transform: perspective(900px) rotate3d(135, 0, 0, -95deg)
