First screem done

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -5,6 +5,17 @@ body_class: index
 / ver 0.3 
 .wraper
   .section.fs-gallery
+    .fs-text
+      %h1 
+        %span.chankf Dublin's<br>
+        %span.alex iPad
+        %span.alex.bold Apps
+      %p 
+        Free and paid apps<br>for your iPad
+      %button Read More
+      .box-shadow
+    .fs-img
+      %img{:src => 'images/ipad_standig.png'}
   .section.boxes
     .box
       .box-inner
