make new block for /apps

--- a/source/apps/index.html.haml
+++ b/source/apps/index.html.haml
@@ -1,4 +1,13 @@
 ---
 title: Apps
-body_class: index
+body_class: boxes apps
 ---
+
+.containre
+  .containre-head
+    .containre-head-titles
+      %h1 Dublin’s iphone applications
+      %h4 Lorem Ipsum is simply dummy
+    .containre-head-search 
+      %input{:type => 'text', :placeholder => 'Searche...'}
+  .containre-tail
