--- a/source/apps/index.html.haml
+++ b/source/apps/index.html.haml
@@ -11,3 +11,77 @@ body_class: boxes apps
     .containre-head-search 
       %input{:type => 'text', :placeholder => 'Searche...'}
   .containre-tail
+    .pads
+      .pad
+        %img{:src => 'images/padpic.png'}
+        %h2 ipad image viewer
+        %h4 Lorem Ipsum is simply 
+        %button.blue Read More
+      .pad
+        %img{:src => 'images/padpic.png'}
+        %h2 ipad image viewer
+        %h4 Lorem Ipsum is simply 
+        %button.blue Read More
+      .pad
+        %img{:src => 'images/padpic.png'}
+        %h2 ipad image viewer
+        %h4 Lorem Ipsum is simply 
+        %button.blue Read More
+    .tabs
+      .tab.active Most Popular
+      .tab Recent
+    .iphones
+      .iphone
+        %img{:src => 'images/iphone-app.png'}
+        .iphone-text
+          %h3 iPhone Apps
+          %p Lorem Ipsum is simply 
+          %button Read More
+      .iphone
+        %img{:src => 'images/iphone-app.png'}
+        .iphone-text
+          %h3 iPhone Apps
+          %p Lorem Ipsum is simply 
+          %button Read More
+      .iphone
+        %img{:src => 'images/iphone-app.png'}
+        .iphone-text
+          %h3 iPhone Apps
+          %p Lorem Ipsum is simply 
+          %button Read More
+      .iphone
+        %img{:src => 'images/iphone-app.png'}
+        .iphone-text
+          %h3 iPhone Apps
+          %p Lorem Ipsum is simply 
+          %button Read More
+      .iphone
+        %img{:src => 'images/iphone-app.png'}
+        .iphone-text
+          %h3 iPhone Apps
+          %p Lorem Ipsum is simply 
+          %button Read More
+      .iphone
+        %img{:src => 'images/iphone-app.png'}
+        .iphone-text
+          %h3 iPhone Apps
+          %p Lorem Ipsum is simply 
+          %button Read More
+      .iphone
+        %img{:src => 'images/iphone-app.png'}
+        .iphone-text
+          %h3 iPhone Apps
+          %p Lorem Ipsum is simply 
+          %button Read More
+      .iphone
+        %img{:src => 'images/iphone-app.png'}
+        .iphone-text
+          %h3 iPhone Apps
+          %p Lorem Ipsum is simply 
+          %button Read More
+      .iphone
+        %img{:src => 'images/iphone-app.png'}
+        .iphone-text
+          %h3 iPhone Apps
+          %p Lorem Ipsum is simply 
+          %button Read More
