--- a/source/stylesheets/common.css.sass
+++ b/source/stylesheets/common.css.sass
@@ -539,3 +539,11 @@ body.boxes
         &:active
           opacity: 0.3
 
+.demo.var
+  padding-top: 50px
+.demo.var-list
+  width: 49%
+  ul
+    li
+      line-height: 1.333
+      margin-top: 13px
